...
            </objects>
            <point key="canvasLocation" x="1593" y="1029"/>
        </scene>
        <!--Tweets-->
        <scene sceneID="We4-j0-Onl">
            <objects>
                <navigationController title="Tweets" automaticallyAdjustsScrollViewInsets="NO" id="MiN-kA-FAK" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Tweets" image="list.dash" catalog="system" id="qY9-6o-LrE"/>
                    <toolbarItems/>
                    <navigationItem key="navigationItem" title="Tweets" id="QNt-Ik-3BJ"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="f7N-io-n7R">
                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
...
            <point key="canvasLocation" x="554" y="327"/>
        </scene>
        <!--Favorites-->
        <scene sceneID="Jvh-ET-a1K">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="QS9-DX-jbD" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Favorites" image="star" catalog="system" id="tRL-aC-EP4"/>
                    <toolbarItems/>
                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="U3g-2h-11H">
                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
...
